# Phoenix5-Linux-Example

./: .gitignore  CMakeLists.txt  Example.java  README.md  build.sh  buildJava.sh  canableStart.sh  clean.sh  example.cpp  run.sh  startJava.sh  update-deps.sh  vcanEnable.sh
cpp/docs/CTRE_Phoenix/html/: _base_motor_controller_8cpp.html  _base_motor_controller_8h.html  _base_motor_controller_8h_source.html  _button_monitor_8cpp.html  _button_monitor_8h.html  _button_monitor_8h_source.html  _c_a_n_bus_addressable_8h.html  _c_a_n_bus_addressable_8h_source.html  _c_a_nifier_8cpp.html  _c_a_nifier_8h.html  _c_a_nifier_8h_source.html  _c_a_nifier___c_c_i_8h.html  _c_a_nifier___c_c_i_8h.js  _c_a_nifier___c_c_i_8h_source.html  _c_a_nifier___low_level_8h.html  _c_a_nifier___low_level_8h_source.html  _c_a_nifier_control_frame_8h.html  _c_a_nifier_control_frame_8h.js  _c_a_nifier_control_frame_8h_source.html  _c_a_nifier_faults_8h.html  _c_a_nifier_faults_8h_source.html  _c_a_nifier_status_frame_8h.html  _c_a_nifier_status_frame_8h.js  _c_a_nifier_status_frame_8h_source.html  _c_a_nifier_sticky_faults_8h.html  _c_a_nifier_sticky_faults_8h_source.html  _c_a_nifier_velocity_meas_period_8h.html  _c_a_nifier_velocity_meas_period_8h.js  _c_a_nifier_velocity_meas_period_8h_source.html  _c_t_r_e___native___c_a_n_8h.html  _c_t_r_e___native___c_a_n_8h.js  _c_t_r_e___native___c_a_n_8h_source.html  _c_t_r_logger_8cpp.html  _c_t_r_logger_8h.html  _c_t_r_logger_8h_source.html  _compile_test_8cpp.html  _concurrent_scheduler_8cpp.html  _concurrent_scheduler_8h.html  _concurrent_scheduler_8h_source.html  _control_frame_8h.html  (+525 more)
include/: CTRE_LICENSE.txt  LICENSE.txt  Platform-linux-socket-can.h
include/ctre/: Phoenix.h
include/ctre/phoenix/: CANBusAddressable.h  CANifier.h  CANifierControlFrame.h  CANifierFaults.h  CANifierStatusFrame.h  CANifierStickyFaults.h  CANifierVelocityMeasPeriod.h  CTRLogger.h  Context.h  CustomParamConfiguration.h  ErrorCode.h  HsvToRgb.h  LinearInterpolation.h  PhoenixVersion.h  RCRadio3Ch.h  StatusCodes.h  Stopwatch.h  Utilities.h  autocache.h  export.h  paramEnum.h
include/ctre/phoenix/Platform/: Platform.h
include/ctre/phoenix/cci/: BuffTrajPointStream_CCI.h  CANCoder_CCI.h  CANdle_CCI.h  CANifier_CCI.h  CCI.h  Diagnostics_CCI.h  Logger_CCI.h  MotController_CCI.h  Orchestra_CCI.h  PDP_CCI.h  PigeonIMU_CCI.h  PlatformCAN_CCI.h  Platform_CCI.h  Unmanaged_CCI.h
include/ctre/phoenix/core/: GadgeteerUartClient.h
include/ctre/phoenix/jni/: com_ctre_phoenix_CANifierJNI.h  com_ctre_phoenix_CTRLoggerJNI.h  com_ctre_phoenix_MotorControl_CAN_MotControllerJNI.h  com_ctre_phoenix_OrchestraJNI.h  com_ctre_phoenix_Sensors_PigeonImuJNI.h  com_ctre_phoenix_led_CANdleJNI.h  com_ctre_phoenix_motion_BuffTrajPointStreamJNI.h  com_ctre_phoenix_motorcontrol_can_MotControllerJNI.h  com_ctre_phoenix_platform_PlatformJNI.h  com_ctre_phoenix_platform_can_PlatformCANJNI.h  com_ctre_phoenix_sensors_CANCoderJNI.h  com_ctre_phoenix_sensors_PigeonImuJNI.h  com_ctre_phoenix_unmanaged_UnmanagedJNI.h
include/ctre/phoenix/led/: Animation.h  BaseStandardAnimation.h  BaseTwoSizeAnimation.h  CANdle.h  CANdleConfigUtil.h  CANdleConfiguration.h  CANdleControlFrame.h  CANdleFaults.h  CANdleLedStripType.h  CANdleStatusFrame.h  ColorFlowAnimation.h  FireAnimation.h  LarsonAnimation.h  RainbowAnimation.h  RgbFadeAnimation.h  SingleFadeAnimation.h  StrobeAnimation.h  TwinkleAnimation.h  TwinkleOffAnimation.h  VBatOutputMode.h
include/ctre/phoenix/motion/: BufferedTrajectoryPointStream.h  MotionProfileStatus.h  SetValueMotionProfile.h  TrajectoryPoint.h
include/ctre/phoenix/motorcontrol/: ControlFrame.h  ControlMode.h  DemandType.h  DeviceCatalog.h  Faults.h  FeedbackDevice.h  FollowerType.h  GroupMotorControllers.h  IFollower.h  IMotorController.h  IMotorControllerEnhanced.h  InvertType.h  LimitSwitchType.h  MotorCommutation.h  NeutralMode.h  RemoteSensorSource.h  SensorCollection.h  SensorTerm.h  StatorCurrentLimitConfiguration.h  StatusFrame.h  StickyFaults.h  SupplyCurrentLimitConfiguration.h  TalonFXSensorCollection.h  TalonFXSimCollection.h  TalonSRXSimCollection.h  VelocityMeasPeriod.h  VictorSPXSimCollection.h
include/ctre/phoenix/music/: Orchestra.h
include/ctre/phoenix/platform/: BasePlatform.h  ConsoleUtil.hpp  DeviceType.hpp  FrcUsageReport.hpp  Platform-pack.h  Platform.h  Platform.hpp  ReportError.h  ReportError.hpp  SleepUs.h  TimeUtil.hpp  canframe.h  canframe.hpp  canivore_device.h  ctr_assert.h
include/ctre/phoenix/sensors/: AbsoluteSensorRange.h  BasePigeon.h  BasePigeonSimCollection.h  (+17 more)
include/ctre/phoenix6/: Serializable.hpp  Utils.h  Utils.hpp  cci_includes.h
include/ctre/phoenixpro/: Serializable.hpp  Utils.hpp  cci_includes.h
(+209 files in other folders)
